# dds-xtypes

./: .gitignore  CMakeLists.txt  Makefile.coredx_osx  README.md  ShapeType.idl  ShapeType.xml  ShapeType_main.cxx  ShapeType_pubsub.cxx  ShapeType_variants.h  array_rules.py  generate_xlsx_report.py  interoperability_report.py  primitive_rules.py  rtps_test_utilities.py  sequence_rules.py  string_rules.py  struct_rules.py  test_suite.py  test_suite_functions.py  test_util.py  testing_dict.py  union_rules.py
.github/workflows/: build.yml
CLA/: CLA_ObjectComputing.md  CLA_Real-Time_Innovations.md  CLA_TEMPLATE.md  CLA_TwinOaksComputing.md
cmake/: ConnextDDSMicro.cmake  ConnextDDSPro.cmake  FindConnextDDSMicro.cmake  FindRTICodeGenerator.cmake  FindRTIConnextDDS.cmake
conformance/ConnextDDSMicro/: Conformance.h
conformance/ConnextDDSPro/: Conformance.h
idl/: commands.idl  shapes.idl
json/data/: array_array_num_10_20.json  array_array_num_10_20_alt.json  array_enum_10.json  array_num_10.json  array_num_20.json  array_string_10.json  enum.json  strings_hello.json  struct_char_x1.json  struct_enum.json  struct_float128_x1.json  struct_key_union.json  struct_num_x1_x2.json  struct_num_x1_x3_x2.json  struct_num_x1_x5.json  struct_num_x2.json  struct_num_x5.json  struct_primitives.json  struct_seq.json  struct_str_key.json  struct_str_x1.json  union_b.json  union_c.json  union_primitive.json  union_uint32.json  union_x1.json  union_x2.json  union_xd.json  wstrings.json  wstrings_hello.json
json/data/tryconstruct/: enum_val1.json  enum_val3.json  seq_num_empty.json  strings.json  strings_default.json  strings_trim_10.json  struct_num_x1.json  struct_num_x1_x2_default_3.json  union_x1.json  union_x3.json
src/: DDS_Variants.h  README.md  TestController.cxx  TestController.h  Utils.cxx  Utils.h  main.cxx
src/TestDataRepresentationQos/: README.md  TestDataRepresentationQos.cxx  TestDataRepresentationQosHelper.cxx
src/TestExtensibility/: README.md  TestExtensibility.cxx  TestExtensibilityHelper.cxx
src/TestHelloWorld/: README.md  TestHelloWorld.cxx  TestHelloWorldHelper.cxx
src/TestSerialization/: README.md  SerializationData.cxx  SerializationData.h  TestSerialization.cxx  TestSerializationHelper.cxx
src/cxx/: makefile_rti_connext_dds_linux  makefile_rti_connext_dds_macos  makefile_toc_coredx_dds_linux  test_main.cxx  variant_rti_connext_dds.h  variant_toc_coredx_dds.hh
srcCxx/: CMakeLists.txt  ShapeType.idl  ShapeType.xml  ShapeType_main.cxx  ShapeType_variants.h  makefile.rti_connext.linux64  makefile.rti_connext.macosx
v1/: compatibility_matrix.xlsx
xml/data/: array_array_num_10_20.xml  array_array_num_10_20_alt.xml  array_enum_10.xml  array_num_10.xml  array_num_20.xml  array_string_10.xml  enum.xml  strings.xml  strings_hello.xml  struct_1.xml  struct_enum.xml  struct_key.xml  struct_key_union.xml  struct_num_x1.xml  struct_num_x1_x2.xml  struct_num_x1_x3_x2.xml  struct_num_x1_x5.xml  struct_num_x2.xml  struct_primitives.xml  struct_seq.xml  struct_str.xml  struct_str_key.xml  union_a.xml  union_b.xml  union_bitmask.xml  union_c.xml  union_primitive.xml  union_uint32.xml  union_x1.xml  union_x2.xml  union_xd.xml  wstrings.xml  wstrings_hello.xml
xml/data/tryconstruct/: enum_val1.xml  enum_val3.xml  seq_num_empty.xml  strings_default.xml  strings_trim_10.xml  union_array_num_10.xml  union_array_num_20.xml  union_enum_val1.xml  union_enum_val3.xml  union_seq_num_empty.xml  union_strings.xml  union_strings_default.xml  union_strings_trim_10.xml  union_x1.xml  union_x3.xml
xml/types/: arrays.xml  extensibility.xml  primitives.xml  sequences.xml  strings.xml  struct_names.xml  struct_w_mustunderstand.xml  try_construct.xml  type_consistency.xml  type_consistency_force_type_val.xml  unions.xml  unions_bitmask.xml  unions_key_discriminator.xml
